--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,13 @@
 			<artifactId>mybatis-generator-core</artifactId>
 			<version>1.3.6</version>
 		</dependency>
+
+		<!--lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.10</version>
+		</dependency>
 	</dependencies>
 
 	<build>
