文件上传功能完善及测试

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,14 @@ spring.datasource.password=123456
 #\u5F00\u542FMybatis\u4E0B\u5212\u7EBF\u547D\u540D\u8F6C\u9A7C\u5CF0\u547D\u540D
 mybatis.configuration.map-underscore-to-camel-case=true
 server.port=8090
+
+
+#mybatis
+mybatis.type-aliases-package=com.wsq.store.common.domain
+mybatis.mapper-locations=classpath:com/wsq/store/common/xml/**/*.xml
+
+#mapper
+#mappers \u591a\u4e2a\u63a5\u53e3\u65f6\u9017\u53f7\u9694\u5f00
+mapper.mappers=com.wsq.store.common.mapper
+mapper.not-empty=false
+mapper.identity=MYSQL
