--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,3 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/security?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
-spring.datasource.username=root
-spring.datasource.password=123456
-#\u5F00\u542FMybatis\u4E0B\u5212\u7EBF\u547D\u540D\u8F6C\u9A7C\u5CF0\u547D\u540D
-mybatis.configuration.map-underscore-to-camel-case=true
-server.port=8090
-
-
 #mybatis
 mybatis.type-aliases-package=com.wsq.store.common.domain
 mybatis.mapper-locations=classpath:com/wsq/store/common/xml/**/*.xml
@@ -16,3 +7,5 @@ mybatis.mapper-locations=classpath:com/wsq/store/common/xml/**/*.xml
 mapper.mappers=com.wsq.store.common.mapper
 mapper.not-empty=false
 mapper.identity=MYSQL
+
+spring.profiles.active=dev
