--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,3 +7,6 @@ mybatis.configuration.map-underscore-to-camel-case=true
 server.port=8090
 
 store.aes.key = 400500600700
+
+logging.path=E:/project/logs/
+logging.file=store.log
