登录前端交互

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -30,3 +30,11 @@ spring.redis.jedis.pool.max-idle=10
 spring.redis.jedis.pool.min-idle=0
 # 连接超时时间（毫秒）
 spring.redis.timeout=1000
+
+
+#Thymeleaf配置
+spring.thymeleaf.cache=false
+spring.thymeleaf.encoding=utf-8
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
