--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ mapper.not-empty=false
 mapper.identity=MYSQL
 
 spring.profiles.active=dev
+
+#控制台打印mybtics的sql语句
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
